@@ -1,4 +1,3 @@
-import yi.buildsrc.release.TargetPlatform
 import yi.buildsrc.release.YiReleasePlugin
 
 import java.nio.file.Paths
@@ -48,7 +47,10 @@ setupBuilder {
                 // TODO: This --module-path value is for macOS only. Might need to figure
                 //       out how to set different VM args for different OSes.
                 "--module-path", "\$APP_ROOT/Contents/Java/",
-                "--module", "yi.editor/yi.editor.EditorMain"
+                "--add-exports", "javafx.graphics/com.sun.glass.ui=yi.editor",
+
+                // This clause must appear after all --add-exports
+                "--module", "yi.editor/yi.editor.EditorMain",
         ]
 
         documentType {
